@@ -1,3 +1,9 @@
+2008-12-12  Dwarakanath Rajagopal  <dwarak.rajagopal@amd.com>
+
+	* config/i386/x86intrin.h: New header file to support all x86 
+	intrinsics
+	* config.gcc (extra_headers): For x86 and x86-64, add x86intrin.h
+	
 2008-12-12  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR target/38402
